--- a/changelog.html
+++ b/changelog.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>KRX Client - Changelog</title>
-    <meta name="description" content="The official website of KRX Client by Krixx. The best free Teeworlds bot client available!">
-    <meta name="author" content="Krixx">
+    <title>BundleClient - Изменения</title>
+    <meta name="description" content="The official website of BundleClient by AstralPath. The best free DDNet client available!">
+    <meta name="author" content="AstralPath">
     <meta name="robots" content="noindex">
 
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
@@ -39,112 +39,19 @@
                 <div class="container-sm">
                     <div class="section-inner">
                         <div class="text-center">
-                            <h2 class="section-title mt-0">Changelog</h2>
-                            <p class="section-paragraph mb-0">Information about latest changes</p>
+                            <h2 class="section-title mt-0">Изменения</h2>
+                            <p class="section-paragraph mb-0">Информация о последних патчах</p>
                         </div>
                         <div class="mt-64">
                             <ul>
                                 <li>
-                                    <div class="text-sm"><span class="h6 m-0">Release v1.10 (31.12.2021)</span></div>
+                                    <div class="text-sm"><span class="h6 m-0">Бета 1.0.0 (24.12.2022)</span></div>
                                     <div class="text-xs">
                                         <p>
-                                        - Updated client to DDNet 15.8<br>
-                                        - Added Version Spoofer
-										</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="text-sm"><span class="h6 m-0">Release v1.09 (22.11.2021)</span></div>
-                                    <div class="text-xs">
-                                        <p>
-                                        - Updated client to DDNet 15.6.2<br>
-                                        - Added Laser Unfreeze bot<br>
-                                        - Added Avoid Freeze bot<br>
-                                        - Added Auto Edge bot<br>
-                                        - Added Fall Prediction<br>
-										- Aim Lines improvements<br>
-                                        - Balance bot improvements
-										</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="text-sm"><span class="h6 m-0">Release v1.08 (08.08.2021)</span></div>
-                                    <div class="text-xs">
-                                        <p>
-										- Added KRX Chat<br>
-                                        - Added Hook Ride bot
-										</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="text-sm"><span class="h6 m-0">Release v1.07 (22.06.2021)</span></div>
-                                    <div class="text-xs">
-                                        <p>
-										- Updated client to DDNet 15.5.4<br>
-										- Bypassed fokkonaut's anti-bot<br>
-                                        - Added Force Edge
-										</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="text-sm"><span class="h6 m-0">Release v1.06 (13.06.2021)</span></div>
-                                    <div class="text-xs">
-                                        <p>
-										- Updated client to DDNet 15.5.1<br>
-										- Improved and fixed aimbot<br>
-                                        - Improved aimbot menu<br>
-                                        - Aimbot now only works when hooking/firing<br>
-										- Removed FNG Mode
-										</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="text-sm"><span class="h6 m-0">Release v1.05 (01.06.2021)</span></div>
-                                    <div class="text-xs">
-                                        <p>
-										- Added basic Replay Bot (Time limit: 30 sec)<br>
-                                        - Added setting to disable occasional ads<br>
-										- Fixed status checking<br>
-                                        - Removed auto-reply ads
-										</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="text-sm"><span class="h6 m-0">Release v1.04 (06.05.2021)</span></div>
-                                    <div class="text-xs">
-                                        <p>
-										- Added Spinbot<br>
-										- Improved and fixed Aimbot
-										</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="text-sm"><span class="h6 m-0">Release v1.03 (29.04.2021)</span></div>
-                                    <div class="text-xs">
-                                        <p>
-										- Added Hook Spam<br>
-										- Added Chat Repeater Min Length<br>
-                                        - Added Draw Aim Lines<br>
-                                        - Added Draw Bullet Lines<br>
-                                        - Reduced Ads
-										</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="text-sm"><span class="h6 m-0">Release v1.02 (21.04.2021)</span></div>
-                                    <div class="text-xs">
-                                        <p>
-										- Added Super Dyncam<br>
-										- Added Pixel Walk
-										</p>
-                                    </div>
-                                </li>
-								<li>
-                                    <div class="text-sm"><span class="h6 m-0">Release v1.01 (15.04.2021)</span></div>
-                                    <div class="text-xs">
-                                        <p>
-										- Added Aim on Hook Only<br>
-										- Added Zoom Hack
+                                        - Сделан под DDNet 16.6<br>
+                                        - Клиент добавлен на сайт<br>
+                                        - Добавлены бинды<br>
+                                        - Добавлен новый дизайн<br>
 										</p>
                                     </div>
                                 </li>
@@ -169,7 +76,7 @@
                     <ul class="footer-social-links list-reset">
                         
                     </ul>
-                    <div class="footer-copyright">&copy; 2022 KRX Client, all rights reserved</div>
+                    <div class="footer-copyright">&copy; 2023 BundleClient, все права защищены</div>
                 </div>
             </div>
         </footer>
