--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>KRX Client - Teeworlds Bot Client</title>
-    <meta name="description" content="The official website of KRX Client by Krixx. The best free Teeworlds bot client available! With this cheat, you will become a true Teeworlds god! KRX Client has many hacks like aimbot, replay bot, spinbot and more!">
-    <meta name="author" content="Krixx">
+    <title>BundleClient - клиент нового поколения</title>
+    <meta name="description" content="The official website BundleScripts by AstralPath. The best free scripts for everything available!">
+    <meta name="author" content="AstralPath">
 
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
@@ -22,7 +22,7 @@
     <div class="alert">
         <div class="element">
             <i class="fas fa-cloud-download-alt white"></i> 
-            <span><b>Update</b>: 31.12.2021</span>
+            <span><b>Обновление</b>: 24.12.2022</span>
         </div>
         <!-- <div class="element">
             <i class="fab fa-discord white"></i> 
@@ -36,7 +36,7 @@
                 <div class="site-header-inner">
                     <div class="brand header-brand">
                         <a href="index.html" class="m-0">
-                            <img class="header-logo-image" src="dist/images/logo.svg" alt="Teeworlds Bot Client Logo">
+                            <img class="header-logo-image" src="dist/images/logo.svg" alt="BundleScripts Logo">
                         </a>
                     </div>
                 </div>
@@ -48,14 +48,14 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Welcome to KRX Client!<br>
-                                <span class="h3">Teeworlds Bot Client</span>
+	                        <h1 class="hero-title mt-0">Добро пожаловать в BundleClient!<br>
+                                <span class="h3">от AstralPath#0037</span>
                             </h1>
-	                        <p class="hero-paragraph">The best free Teeworlds bot client available! KRX Client is based on the latest DDNet source. You can check some of the unique client features below.</p>
+	                        <p class="hero-paragraph">Клиент нового поколения! Множество новых функций! Скачай бесплатно!</p>
 	                        <div class="hero-cta">
-                                <a class="button button-primary mb-16" href="index.html#download">Download now</a>
-                                <!-- <a href="https://discord.gg/KUnc5bXTdV"><i class="fab fa-discord fa-2x icons"></i></a> -->
-                                <a href="https://t.me/joinchat/4sp4Mduuf0RiZGM0"><i class="fab fa-telegram fa-2x icons"></i></a>
+                                <a class="button button-primary mb-16" href="https://discord.gg/kTJBZcUd">Дискорд</a>
+                                <!-- <a href="https://discord.gg/kTJBZcUd"><i class="fab fa-discord fa-2x icons"></i></a> -->
+                                <a href="https://discord.gg/kTJBZcUd"><i class="fab fa-discord fa-2x icons"></i></a>
                             </div>
 						</div>
 						<div class="hero-figure anime-element">
@@ -85,28 +85,28 @@
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <i class="fas fa-crosshairs fa-4x"></i>
+                                        <i class="fas fa-code fa-4x"></i>
                                     </div>
-                                    <h4 class="feature-title mt-24">Advanced Aimbot</h4>
-                                    <p class="text-sm mb-0">With our Aimbot, you will never miss a hook again! It is also working with edge hooks!</p>
+                                    <h4 class="feature-title mt-24">Открытый код</h4>
+                                    <p class="text-sm mb-0">Наш клиент имеет открытый исходный код. Любой кто шарит в программировании может его изменить!</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <i class="fas fa-history fa-4x"></i>
+                                        <i class="fas fa-heart fa-4x"></i>
                                     </div>
-                                    <h4 class="feature-title mt-24">Replay Bot</h4>
-                                    <p class="text-sm mb-0">Save your moves and load them to make your life easier!</p>
+                                    <h4 class="feature-title mt-24">Забота</h4>
+                                    <p class="text-sm mb-0">Не смотря ни на что мы заботимся о каждом нашем пользователе! Возникла проблема? Пиши в дискорд!</p>
                                 </div>
                             </div>
 							<div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <i class="fas fa-sync-alt fa-4x"></i>
+                                        <i class="fas fa-keyboard fa-4x"></i>
                                     </div>
-                                    <h4 class="feature-title mt-24">Spinbot</h4>
-                                    <p class="text-sm mb-0">Fake your real aim angle by constantly spinning around!</p>
+                                    <h4 class="feature-title mt-24">Бинды</h4>
+                                    <p class="text-sm mb-0">Наш клиент имеет более 20 годных биндов, каждый из которой поможет в игровом процессе!</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
@@ -114,17 +114,17 @@
                                     <div class="feature-icon">
 										<i class="fas fa-paint-brush fa-4x"></i>
                                     </div>
-                                    <h4 class="feature-title mt-24">Aim Lines</h4>
-                                    <p class="text-sm mb-0">See aim lines of yourself or other players. Highly customizable. You can also see bullet lines!</p>
+                                    <h4 class="feature-title mt-24">Дизайн</h4>
+                                    <p class="text-sm mb-0">Наш клиент имеет другой дизайн в отличии от оригинальной DDNet. Он вам точно понравится!</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-										<i class="fas fa-user-secret fa-4x"></i>
+										<i class="fas fa-rocket fa-4x"></i>
                                     </div>
-                                    <h4 class="feature-title mt-24">Mod Detector</h4>
-                                    <p class="text-sm mb-0">Avoid getting banned by automatically leaving the server when the moderator joins!</p>
+                                    <h4 class="feature-title mt-24">Скорость и оптимизация</h4>
+                                    <p class="text-sm mb-0">Наш клиент имеет хорошую оптимизацию и скорость. Забудьте высокий пинг на русских серверах и кайфуйте от самого высокого FPS</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
@@ -133,8 +133,8 @@
 										<!-- <img src="dist/images/feature-icon-06.svg" alt="Feature 06"> -->
                                         <i class="fas fa-shield-alt fa-4x"></i>
                                     </div>
-                                    <h4 class="feature-title mt-24">Undetected</h4>
-                                    <p class="text-sm mb-0">The client is undetected on most of the servers. Stay safe bro!</p>
+                                    <h4 class="feature-title mt-24">Безопасность</h4>
+                                    <p class="text-sm mb-0">В нашем клиенте нету читов, софтов, вирусов или троянов! Не беспокойтесь за свой девайс и наслаждайтесь игрой!</p>
                                 </div>
                             </div>
                         </div>
@@ -146,35 +146,44 @@
                 <div class="container-sm">
                     <div class="pricing-inner section-inner has-bottom-divider">
                         <div class="pricing-header text-center">
-                            <h2 class="section-title mt-0">Get KRX Client - Teeworlds Bot Client</h2>
-                            <p class="section-paragraph mb-0">Download KRX Client and become a true Teeworlds god!</p>
+                            <h2 class="section-title mt-0">Получи свой BundleClient уже сейчас!</h2>
+                            <p class="section-paragraph mb-0">Скачай бесплатно в дискорде!</p>
                         </div>
 						<div class="pricing-tables-wrap">
                             <div class="pricing-table">
                                 <div class="pricing-table-inner is-revealing">
                                     <div class="pricing-table-main">
                                         <div class="pricing-table-header pb-24">
-                                            <div class="pricing-table-price"><span class="pricing-table-price-amount h1">Free</span></div>
+                                            <div class="pricing-table-price"><span class="pricing-table-price-amount h1">Бесплатно</span></div>
                                             <div class="text-xs">
-												Version: 1.10<br>
-                                                <a href="changelog.html">Changelog</a>
+												Версия: 1.0.0<br>
+                                                <a href="changelog.html">Изменения</a>
 											</div>
                                         </div>
-										<div class="pricing-table-features-title text-xs pt-24 pb-24">What’s included</div>
+										<div class="pricing-table-features-title text-xs pt-24 pb-24">О клиенте</div>
                                         <ul class="pricing-table-features list-reset text-xs">
                                             <li>
-                                                <span>20+ Features</span>
+                                                <span>40+ Возможностей</span>
                                             </li>
                                             <li>
-                                                <span>Telegram Support</span>
+                                                <span>Красивый дизайн</span>
+                                            </li>
+                                            <li>
+                                                <span>Исходный код</span>
+                                            </li>
+                                            <li>
+                                                <span>Гарантированная безопасность</span>
+                                            </li>
+                                            <li>
+                                                <span>Высокая оптимизация и скорость</span>
                                             </li>
                                         </ul>
                                     </div>
                                     <div class="pricing-table-cta mb-8">
-                                        <a class="button button-primary button-shadow button-block" href="https://mega.nz/file/kJEXQDzI#hKFodD3eIZnMGP5QsZRxt3qLyJlFcVuMseLF7IWT4L0">Download 64-bit<i class="fab fa-windows windows fa-2x"></i></a>
+                                        <a class="button button-primary button-shadow button-block" href="https://discord.com">Скачать дискорд</a>
                                     </div>
                                     <div class="pricing-table-cta mb-8">
-                                        <a class="button button-primary button-shadow button-block" href="https://mega.nz/file/IJdAmZBL#SS1mjw4pdNQnlXYv4RpSmYUIrbWPOtwJis5YpX3TjV8">Download 32-bit<i class="fab fa-windows windows fa-2x"></i></a>
+                                        <a class="button button-primary button-shadow button-block" href="https://discord.gg/kTJBZcUd">Скачать клиент</a>
                                     </div>
                                 </div>
                             </div>
@@ -187,27 +196,27 @@
                 <div class="container-sm">
                     <div class="section-inner">
                         <div class="text-center">
-                            <h2 class="section-title mt-0">Frequently Asked Questions</h2>
-                            <p class="section-paragraph mb-0">Answers to commonly asked questions</p>
+                            <h2 class="section-title mt-0">Часто Спрашиваемые Вопросы</h2>
+                            <p class="section-paragraph mb-0">Ответы на частые вопросы</p>
                         </div>
                         <div class="mt-64">
                             <ul>
                                 <li>
-                                    <div class="text-sm"><span class="h6 m-0">Unable to check KRX Client status, how to fix it?</span></div>
+                                    <div class="text-sm"><span class="h6 m-0">Бандл Клиент точно не имеет вирусов?</span></div>
                                     <div class="text-xs">
-                                        <p>There are a few possible fixes. First, make sure that you have an internet connection. Then you can try to <a href="https://www.youtube.com/watch?v=TqTUk5GgmQ8">change your DNS server</a>, use a VPN or restart your router.</p>
+                                        <p>Да, даём пожизненную гарантию.</p>
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="text-sm"><span class="h6 m-0">Is it safe to use?</span></div>
+                                    <div class="text-sm"><span class="h6 m-0">Правда ли, что ФПС повысится? Как это работает?</span></div>
                                     <div class="text-xs">
-                                        <p>KRX Client is completely safe. However, the binary file is obfuscated for security reasons. That's why your anti-virus might flag it as malicious but it's just a false positive.</p>
+                                        <p>Наш клиент очищает ненужные файлы на компьютере, которые мешают работе DDNet, а также оптимизирует внутреигровые файлы. Благодаря этому клиент будет летать! ФПС правда поднимется!</p>
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="text-sm"><span class="h6 m-0">Is it open source?</span></div>
+                                    <div class="text-sm"><span class="h6 m-0">Где я могу найти исходный код клиента?</span></div>
                                     <div class="text-xs">
-                                        <p>No, it's a closed source. Why? Because we want to keep it undetected, that way it's harder to make an antibot. We also want to have control over it. We might decide to disable access to the client someday.</p>
+                                        <p>В нашем дискорде во вкладке #downloads ищете Бандл Клиент и переходите на github.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -219,10 +228,10 @@
 			<section class="cta section">
 				<div class="container">
 					<div class="cta-inner section-inner">
-						<h3 class="section-title mt-0">Do you still have a question?</h3>
+						<h3 class="section-title mt-0">У тебя остались вопросы? Посети наш дискорд сервер! Помимо клиента там есть много других полезных модов, скриптов и клиентов!</h3>
 						<div class="cta-cta">
-                            <!-- <a href="https://discord.gg/KUnc5bXTdV"><i class="fab fa-discord fa-2x icons"></i></a> -->
-                            <a href="https://t.me/joinchat/4sp4Mduuf0RiZGM0"><i class="fab fa-telegram fa-2x icons"></i></a>
+                            <!-- <a href="https://discord.gg/kTJBZcUd"><i class="fab fa-discord fa-2x icons"></i></a> -->
+                            <a href="https://discord.gg/kTJBZcUd"><i class="fab fa-discord fa-2x icons"></i></a>
 						</div>
 					</div>
 				</div>
@@ -243,7 +252,7 @@
                     <ul class="footer-social-links list-reset">
                         
                     </ul>
-                    <div class="footer-copyright">&copy; 2022 KRX Client, all rights reserved</div>
+                    <div class="footer-copyright">&copy; 2023 BundleClient, все права защищены</div>
                 </div>
             </div>
         </footer>
