--- a/changelog.html
+++ b/changelog.html
@@ -12,8 +12,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
-    <link rel="icon" type="image/png" href="dist/images/favicon.png">
-    <link rel="shortcut icon" type="image/png" href="dist/images/favicon.png">
+    <link rel="icon" type="image/png" href="dist/images/favicon01.png">
+    <link rel="shortcut icon" type="image/png" href="dist/images/favicon01.png">
 
 	<script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
